deploy/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duptwo
  labels:
    app: duptwo
    environment: production
