deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duptwo
  labels:
    app: duptwo
    version: "2.0"
